[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "An unofficial Starbucks Singapore (SG) software development kit (SDK)."
homepage = "https://github.com/ngshiheng/sbux"
license = "MIT"
name = "sbux"
packages = [
  {include = "sbux", from = "src"},
]
readme = "README.md"
repository = "https://github.com/ngshiheng/sbux"
version = "0.2.1"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
dataclasses-json = "^0.5.7"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
python-semantic-release = "^7.32.2"

[tool.black]
line-length = 100

[tool.isort]
extra_standard_library = ["toml"]
line_length = 100
profile = "black"

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
major_on_zero = true
upload_to_pypi = true
upload_to_release = true
version_toml = [
  "pyproject.toml:tool.poetry.version",
]
version_variable = [
  "src/sbux/__init__.py:__version__",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
